# SoftRenderAdv

./: .gitignore  CMakeLists.txt
src/: Config.h  Main.cpp  Viewer.cpp  Viewer.h  ViewerManager.h  ViewerOpenGL.h  ViewerVulkan.h
src/base/: Buffer.h  FileUtils.h  ImageUtils.cpp  ImageUtils.h  Logger.cpp  Logger.h  MathInc.h  MemoryUtils.h  UUID.h
src/math/: TMatHelpers.h  TQuatHelpers.h  TVecHelpers.h  compiler.h  fast.h  half.h  mat2.h  mat3.h  mat4.h  mathfwd.h  norm.h  quat.h  scalar.h  vec2.h  vec3.h  vec4.h
src/render/: Framebuffer.h  PipelineStates.h  RenderStates.h  Renderer.h  ShaderProgram.h  Texture.h  Uniform.h  Vertex.h
src/render/opengl/: EnumsOpenGL.h  FramebufferOpenGL.h  GLSLUtils.cpp  GLSLUtils.h  OpenGLUtils.h  RendererOpenGL.cpp  RendererOpenGL.h  ShaderProgramOpenGL.h  TextureOpenGL.h  UniformOpenGL.h  VertexOpenGL.h
